[package]
name = "mmo-server"
version = "0.0.1"
authors = ["eidng8 <cheung.jackey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1.2.0"
chrono = "^0.4.10"
mio = "^0.6"
rand = "^0.4.0"
serde = { version = "1.0.101", features = ["derive"] }
