[package]
name = "mmo-server"
version = "0.0.1"
authors = ["eidng8 <cheung.jackey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2"
chrono = "0.4"
futures = "0.3"
rand = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
